Added initial inputs for Property List and Property components
Added initial inputs for Property List and Property components. Added an initial property list to the main app component to test implementation.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,5 @@
 <mat-toolbar color="primary">
   <span>Property Manager</span>
 </mat-toolbar>
+
+<app-property-list [properties]="results"></app-property-list>
