--- a/src/app/components/property/property.component.html
+++ b/src/app/components/property/property.component.html
@@ -1,13 +1,11 @@
-<div class="property-card">
+<div class="property-card" (mouseenter)="showAction=true" (mouseleave)="showAction=false">
   <div [style.background-color]="property.agency.brandingColors.primary">
     <!-- <div mat-card-avatar class="property-header-image" [style.background-image]="'url('+property.agency.logo+')'"></div> -->
     <img [src]="property.agency.logo" alt="Agency logo">
   </div>
   <img [src]="property.mainImage" alt="Property image" class="property-main-image">
-  <mat-card-content>
-    <p>
-      {{property.price}}
-    </p>
-    <button mat-button (click)="onAction(property)">{{action}}</button>
-  </mat-card-content>
+  <mat-card-footer>
+    <button *ngIf="!showAction" mat-button color="primary" class="full-width">{{property.price}}</button>
+    <button *ngIf="showAction" mat-raised-button [color]="action === 'ADD' ? 'primary' : 'warn'" class="full-width" (click)="onAction(property)">{{action}}</button>
+  </mat-card-footer>
 </div>
